--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   give-me-a-chance:
     runs-on: ubuntu-latest
+    needs: ["wait-for-me"]
     steps:
       - name: How to detect that you run on PR
         if: "${{ github.event.inputs.message == '' }}"
@@ -20,4 +21,9 @@ jobs:
         if: "${{ github.event.inputs.message != '' }}"
         run: echo "This is a manual workflow because someone send you a message: ${{ github.event.inputs.message }}"
       - name: Substitute if not provided
-        run: echo "${{ github.event.inputs.message || 'don't you want to be friends?..' }}"
+  wait-for-me:
+    runs-on: ubuntu-latest
+    if: "github.ref == 'refs/heads/master'"
+    steps:
+      - name: just have some fun
+        run: echo "By bitcoin with all my savings!(<|_<|)"
