--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,16 @@ jobs:
       - name: How to detect that you run on PR
         if: "${{ github.event.inputs.message == '' }}"
         run: echo "This is a PR because required input is empty"
+      - name: How to detect that you run on manual workflow
+        if: "${{ github.event.inputs.message != '' }}"
+        run: | 
+          echo 'This is a manual workflow because someone send you a message: ${{ github.event.inputs.message }}'
+      - name: input provided 
+        if: "${{ github.events.inputs.message != '' }}"
+        run: echo "Some one is chatty: ${{ github.events.inputs.message }}"
+      - name: input is not provided 
+        if: "${{ github.events.inputs.message == '' }}"
+        run: echo "Some one is chatty: but nothing to say"
   wait-for-me:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master'"
