fix yaml errors

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
-name: Time to shine luv 
-
-on: 
+---
+name: Time to shine luv
+on:
   workflow_dispatch:
     inputs:
       message:
@@ -19,14 +19,16 @@ jobs:
         run: echo "This is a PR because required input is empty"
       - name: How to detect that you run on manual workflow
         if: "${{ github.event.inputs.message != '' }}"
-        run: | 
-          echo 'This is a manual workflow because someone send you a message: ${{ github.event.inputs.message }}'
-      - name: input provided 
+        run: >
+          echo "This is a manual workflow
+          because someone send you a message:
+          ${{ github.event.inputs.message }}"
+      - name: input provided
         if: "${{ github.events.inputs.message != '' }}"
-        run: echo "Some one is chatty: ${{ github.events.inputs.message }}"
-      - name: input is not provided 
+        run: echo "Some one is chatty ${{ github.event.inputs.message }}"
+      - name: input is not provided
         if: "${{ github.events.inputs.message == '' }}"
-        run: echo "Some one is chatty: but nothing to say"
+        run: echo "Some one is chatty but has nothing to say"
   wait-for-me:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master'"
