--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,18 +46,15 @@ jobs:
       - name: set var to "1"
         id: set
         run: |
-          export SET=42
+          export SET=suck-it-jin-yang
           echo $SET
           echo '::set-output name=set::${SET}'
-          echo '::set-output name=not_set::$NOT_SET'
-     outputs:
-       set: ${{ steps.set.outputs.set }}
-       not_set: ${{ steps.set.outputs.not_set }}
+          echo '::set-output name=not_set::${NOT_SET}'
   get-vars:
     needs: set-vars
     runs-on: ubuntu-latest
     steps:
       - name: get var that was set
-        run: echo 'This var was set to ${{ needs.set-vars.outputs.set }}'
+        run: echo 'This var was set to ${{ needs.set.outputs.set }}'
       - name: get var that was not set
-        run: echo 'This var was not set - ${{ needs.set-vars.outputs.not_set }}'
+        run: echo 'This var was not set - ${{ needs.set.outputs.not_set }}'
