--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,30 +49,29 @@ jobs:
         run: |
           export "LOL=suck-it-jin-yang"
           echo "::set-output name=lol::${LOL}"
-      - name: set branch and days vars
+      - name: set branch and wf_run vars
         run: |
           # I know it's meningless to do when you have GitHub context, just f.e.
           branch=$(git branch --show-current)
           echo "::set-output name=branch::${branch}"
-          echo "::set-output name=days::5"
     outputs:
       branch: ${{ steps.set.outputs.branch }}
-      days: ${{ steps.set.outputs.days }}
       lol: ${{ steps.set.outputs.lol }}
   get-vars:
     needs: [set-multijob-vars, check-up-to-date]
     runs-on: ubuntu-latest
     steps:
+      - name: cancel whole job on condition
+        if: ${{ github.ref == 'refs/heads/master' }}
+        uses: andymckay/cancel-action@0.2
       - name: get var that was set
         run: echo 'Gilfoyle says ${{ needs.set-multijob-vars.outputs.lol }}'
-      - name: print if the repo needs update
-        run: |
-          echo 'Repo is up to date ${{ needs.check-up-to-date.outputs.branch }}'
-          echo 'Days lasted ${{ needs.check-up-to-date.outputs.days }}'
-      - name: skip this if output from the job is different from expected
+      - name: skip this if output from the job is not expected
         if: ${{ needs.set-multijob-vars.outputs.branch == 'main' }}
-        run: |
-          echo 'Hey! You finally awake, dragonborn.'
+        run: echo 'Hey! You finally awake, dragonborn.'
   after-all:
     runs-on: ubuntu-latest
-    needs:
+    needs: get-vars
+    steps:
+      - name: end this
+        run: echo 'Have mercy'
