--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,12 +28,6 @@ jobs:
       - name: input is not provided
         if: "${{ github.events.inputs.message == '' }}"
         run: echo "Some one is chatty but has nothing to say"
-  waits-for-job:
-    runs-on: ubuntu-latest
-    needs: ["run-if-master"]
-    steps:
-      - name: Waited
-        run: echo 'Now Dobby is free'
   run-if-master:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master'"
@@ -75,6 +69,22 @@ jobs:
       - name: skip this if output from the job is not expected
         if: ${{ needs.set-multijob-vars.outputs.branch == 'main' }}
         run: echo 'Hey! You finally awake, dragonborn.'
+  skip-if-output:
+    runs-on: ubuntu-latest
+    needs: [set-multijob-vars]
+    if: ${{ needs.set-multijob-vars.outputs.branch == 'master' }}
+    steps:
+      - name: print output
+        run: echo 'Still runnin ${{ needs.set-multijob-vars.outputs.branch }}'
+  master-only:
+    runs-on: ubuntu-latest
+    needs: [skip-if-output]
+    steps:
+      - name: sup
+        run: |
+          echo "Aha, here we are on master again"
+          echo "So this wf is skipped because of the condition on
+          `skip-if-output` job"
   after-all:
     runs-on: ubuntu-latest
     needs: get-vars
