--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,6 +48,7 @@ jobs:
         run: |
           # I know it's meningless to do when you have GitHub context, just f.e.
           branch=$(git branch --show-current)
+          echo 'About to set a branch to $branch'
           echo "::set-output name=branch::${branch}"
     outputs:
       branch: ${{ steps.set.outputs.branch }}
