--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,14 +68,16 @@ jobs:
         id: update
         run: |
           git fetch
-          DIFF=$(git diff origin/master...origin/test)
+          DIFF=$(git diff master...test)
           if [ "$DIFF" != "" ];then
             echo "Update needed"
-
-          TEST=$(git rev-parse origin/test)
-          MASTER=$(git rev-parse origin/master)
-          echo $TEST == $MASTER
-          if [[ $TEST != $MASTER ]];then
+          fi
+          # This is dump to do because of merge commits
+          # TEST=$(git rev-parse origin/test)
+          # MASTER=$(git rev-parse origin/master)
+          # echo $TEST == $MASTER
+          # what we do instead
+          if [[ $DIFF != "" ]];then
             RUN="update"
           fi
           echo set from condition RUN=$RUN 
