try map instead of step

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,6 +28,13 @@ jobs:
       - name: input is not provided
         if: "${{ github.events.inputs.message == '' }}"
         run: echo "Some one is chatty but has nothing to say"
+  test-weird-patterns:
+    runs-on: ubuntu-latest
+    steps:
+      - name: just have some fun
+        run: echo "By bitcoin with all my savings!(<|_<|)"
+      - {}
+
   run-if-master:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master'"
