--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -124,6 +124,14 @@ jobs:
           echo "Aha, here we go again"
           echo "So this wf is not skipped because of the condition on
           `skip-if-output` job"
+  mess-with-a-branch:
+    runs-on: ubuntu-latest
+    needs: get-vars
+    steps:
+      - name: Declare new branch through GITHUB_REF
+        run: echo "Current: ${{ env.GITHUB_REF }}" && "GITHUB_REF=not-test" >> $GITHUB_ENV
+      - name: print branch after set
+        run: echo "Current: ${{ env.GITHUB_REF }}" 
   after-all:
     runs-on: ubuntu-latest
     needs: get-vars
