--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -129,9 +129,11 @@ jobs:
     needs: get-vars
     steps:
       - name: Declare new branch through GITHUB_REF
-        run: echo "Current: ${{ env.GITHUB_REF }}" && "GITHUB_REF=not-test" >> $GITHUB_ENV
+        run: |
+          echo "Current ${{ env.GITHUB_REF }}"
+          echo "GITHUB_REF=not-test" >> $GITHUB_ENV
       - name: print branch after set
-        run: echo "Current: ${{ env.GITHUB_REF }}" 
+        run: echo "Current= ${{ env.GITHUB_REF }}"
   after-all:
     runs-on: ubuntu-latest
     needs: get-vars
