--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -130,11 +130,12 @@ jobs:
     steps:
       - name: Declare new branch through GITHUB_REF
         run: |
-          DECLARED=${{ env.GITHUB_REF == '' &&
+          DECLARED=`${{ env.GITHUB_REF == '' &&
           'GITHUB_REF is not declared' ||
-          env.GITHUB_ENV }}
+          env.GITHUB_ENV }}`
           echo "Current $DECLARED"
           echo "GITHUB_REF=not-test" >> $GITHUB_ENV
+          echo ${GITHUB_REF#refs/heads/} 
       - name: print branch after set
         run: echo "Current= ${{ env.GITHUB_REF }}"
   after-all:
