--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -15,10 +15,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        ref: master
+        with:
+          ref: master
       - run: echo $(git branch --show-current)
       - run: echo ${{ env.GITHUB_REF }}
       - run: echo ${{ github.ref }}
+  checkout2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ env.GITHUB_REF }} 
   rust-toolchain:
     runs-on: ubuntu-latest
     steps:
