--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,8 @@ on:
         required: true
         default: "wiscussy"
   pull_request: ~
-
+env:
+  SOME_VAR: "random_value"
 jobs:
   print-input-based-on-workflow-on-type:
     runs-on: ubuntu-latest
@@ -30,10 +31,16 @@ jobs:
         run: echo "Some one is chatty but has nothing to say"
   test-weird-patterns:
     runs-on: ubuntu-latest
+    if: ${{ github.env.SOME_VAR == "random_var" }}
     steps:
       - name: just have some fun
         run: echo "By bitcoin with all my savings!(<|_<|)"
-
+  test-env:
+    runs-on: ubuntu-latest
+    if: ${{ github.env.SOME_VAR == "random_var" && env.SOME_VAR == "random_var" }}
+    steps:
+      - name: just have some fun
+        run: echo "By bitcoin with all my savings!(<|_<|)"
   run-if-master:
     runs-on: ubuntu-latest
     if: "github.ref == 'refs/heads/master'"
