--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,7 +36,7 @@ jobs:
         run: echo "By bitcoin with all my savings!(<|_<|)"
   test-env:
     runs-on: ubuntu-latest
-    if: github.env.SOME_VAR == 'random_var' && env.SOME_VAR == 'random_var'
+    if: github.env.SOME_VAR == 'random_var'
     steps:
       - name: just have some fun
         run: echo "By bitcoin with all my savings!(<|_<|)"
