consolidate everything in cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,18 @@ description="""
 GitHub API examples with Octocrab crate
 """
 
+[features]
+default = []
+
+# server with DB
+server = ["rocket"]
 
 [dependencies]
 envy = "0.4.2"
 octocrab = "0.15"
-rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
+rocket = { version = "0.5.0-rc.2", features = ["secrets"], optional = true }
 structopt = { version = "0.3", features = ["wrap_help"] }
-#tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 thiserror = "1.0"
 jsonwebtoken = "7"
 futures = "0.3.8"
