--- a/.github/actions/composite-test/action.yml
+++ b/.github/actions/composite-test/action.yml
@@ -16,5 +16,5 @@ runs:
       id: greet
       run: echo "greet_text='Hello. ${{ inputs.name }}'" >> $GITHUB_OUTPUT
       shell: bash
-    - uses: dariuszkaras/smart-action@v1 
+    - uses: actions/setup-node@v3
 
